--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -1,7 +1,12 @@
 {
   "name": "Upgraded UofT A&S Timetable",
-  "description": "An upgraded version of the UofT Arts and Science Timetable.",
-  "version": "1.0",
+  "description": "An extension which adds additional features to the UofT Arts and Science Timetable.",
+  "icons": {
+    "16": "icons/icon16.png",
+    "48": "icons/icon48.png",
+    "128": "icons/icon128.png"
+  },
+  "version": "0.0.1",
   "manifest_version": 3,
   "web_accessible_resources": [{
     "resources": ["script.js"],
